# nostr-notes

./: .gitignore  AGENTS.md  README.md  flake.nix  justfile
.github/workflows/: android.yml  e2e-video-android.yml  e2e-video-ios.yml  ios.yml
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/dev/damsac/nostrnotes/: MainActivity.kt
crates/blossom-upload/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  models.rs  relay.rs  store.rs
crates/ffi/: Cargo.toml  uniffi.toml
crates/ffi/src/: lib.rs
docs/: ci-pipelines.md
ios/: project.yml
ios/Sources/: App.swift
ios/Tests/: NostrNotesTests.swift
scripts/: ios-build
